--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Generator Prediksi Jitu 4D | Analisis Algoritma Tyson & Kalender</title>
-    <meta name="description" content="Layanan Generator Prediksi Jitu 4D tercepat dan akurat. Menggunakan algoritma analisis tanggal, bulan, tahun, dan rumus Tyson angka keluaran terakhir untuk menghasilkan 50 LN angka paten.">
+    <meta name="description" content="Layanan Generator Prediksi Jitu 4D tercepat dan akurat. Menggunakan algoritma analisis tanggal, bulan, tahun, dan rumus Tyson angka keluaran terakhir untuk menghasilkan 100 LN angka paten.">
     <meta name="keywords" content="prediksi jitu, generator 4d, rumus tyson, angka main, togel generator, analisis angka">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Master Prediksi Pro">
@@ -62,7 +62,7 @@
                 Generator Angka <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-cyan-500">4D Presisi Tinggi</span>
             </h1>
             <p class="text-lg text-slate-600 max-w-2xl mx-auto">
-                Sistem analisis otomatis menggabungkan algoritma Tyson, Data Kalender (Hari, Bulan, Tahun), dan Statistik Keluaran Terakhir untuk menghasilkan 50 LN Angka Jitu.
+                Sistem analisis otomatis menggabungkan algoritma Tyson, Data Kalender (Hari, Bulan, Tahun), dan Statistik Keluaran Terakhir untuk menghasilkan 100 LN Angka Jitu.
             </p>
         </div>
 
@@ -117,16 +117,22 @@
 
                 <!-- Action Button -->
                 <button onclick="generateNumbers()" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-sm font-bold text-white bg-gradient-to-r from-blue-600 to-blue-500 hover:from-blue-700 hover:to-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-all transform active:scale-95">
-                    ANALISIS & GENERATE 50 LN
+                    ANALISIS & GENERATE 100 LN
                 </button>
             </div>
         </div>
 
         <!-- Results Section -->
         <div id="resultSection" class="max-w-4xl mx-auto mt-12 hidden">
-            <div class="flex items-center justify-between mb-6">
-                <h3 class="text-2xl font-bold text-slate-800">Hasil Analisis Prediksi</h3>
-                <span class="bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded border border-green-400">Algoritma Sukses</span>
+            <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
+                <div class="flex items-center gap-3">
+                    <h3 class="text-2xl font-bold text-slate-800">Hasil Analisis Prediksi</h3>
+                    <span class="bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded border border-green-400">Algoritma Sukses</span>
+                </div>
+                <button onclick="copyToClipboard()" class="flex items-center gap-2 bg-slate-800 hover:bg-slate-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition shadow-sm active:scale-95">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-copy"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>
+                    Salin 100 LN
+                </button>
             </div>
             
             <div class="bg-white rounded-xl shadow-lg border border-slate-200 p-6">
@@ -163,7 +169,7 @@
                 <li>Masukkan <strong>4 digit (4D)</strong> angka keluaran terakhir pada kotak kecil yang tersedia.</li>
                 <li>Klik tombol <strong>Analisis & Generate</strong>.</li>
                 <li>Sistem akan memproses data: <em>(Jumlah Tahun + Jumlah Bulan + Jumlah Tanggal + Nilai Tyson + Jumlah Digit 4D)</em>.</li>
-                <li>Hasil 50 LN (Line Numbers) akan ditampilkan secara otomatis di bawah.</li>
+                <li>Hasil 100 LN (Line Numbers) akan ditampilkan secara otomatis di bawah.</li>
             </ul>
         </article>
 
