🚀 Build: Professional Architecture Update via AI Web Architect

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
             <!-- Menu Links Added as Requested -->
             <div class="flex flex-wrap justify-center gap-3 mb-6 mt-2">
-                <a href="#" class="group flex items-center gap-2 px-5 py-2 bg-white border border-slate-200 rounded-full text-sm font-semibold text-slate-600 hover:text-blue-600 hover:border-blue-400 shadow-sm hover:shadow-md transition-all duration-300">
+                <a href="paito-hk.html" class="group flex items-center gap-2 px-5 py-2 bg-white border border-slate-200 rounded-full text-sm font-semibold text-slate-600 hover:text-blue-600 hover:border-blue-400 shadow-sm hover:shadow-md transition-all duration-300">
                     <span class="w-2 h-2 rounded-full bg-red-500 group-hover:animate-pulse"></span>
                     Paito HK Lotto
                 </a>
@@ -259,8 +259,8 @@
                 <div>
                     <h3 class="text-sm font-bold text-white tracking-wider uppercase mb-6 border-b border-slate-800 pb-2 inline-block">Navigasi</h3>
                     <ul class="space-y-4">
-                        <li><a href="#" class="text-slate-400 hover:text-blue-400 transition-colors text-sm flex items-center gap-2"><span class="w-1 h-1 bg-blue-500 rounded-full"></span> Beranda</a></li>
-                        <li><a href="#guide" class="text-slate-400 hover:text-blue-400 transition-colors text-sm flex items-center gap-2"><span class="w-1 h-1 bg-blue-500 rounded-full"></span> Panduan Rumus</a></li>
+                        <li><a href="index.html" class="text-slate-400 hover:text-blue-400 transition-colors text-sm flex items-center gap-2"><span class="w-1 h-1 bg-blue-500 rounded-full"></span> Beranda</a></li>
+                        <li><a href="index.html#guide" class="text-slate-400 hover:text-blue-400 transition-colors text-sm flex items-center gap-2"><span class="w-1 h-1 bg-blue-500 rounded-full"></span> Panduan Rumus</a></li>
                         <li><a href="#" class="text-slate-400 hover:text-blue-400 transition-colors text-sm flex items-center gap-2"><span class="w-1 h-1 bg-blue-500 rounded-full"></span> Tentang Kami</a></li>
                     </ul>
                 </div>
